--- a/BlazorBlog.Client/Pages/Counter.razor
+++ b/BlazorBlog.Client/Pages/Counter.razor
@@ -7,7 +7,11 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary"
+        disabled="@(currentCount > 10)"
+        @onclick="IncrementCount">
+    Click me
+</button>
 
 @code {
     private int currentCount = 0;
